--- a/ok-main/Views/Shared/_CustomerLayout.cshtml
+++ b/ok-main/Views/Shared/_CustomerLayout.cshtml
@@ -186,7 +186,9 @@
         </a>
     </div>
     @RenderBody()
+    <footer>
 
+    </footer>
     <script src="~/Customer/javascript/vendor.min.js"></script>
     <script src="~/Customer/javascript/app.min.js"></script>
 </body>
