--- a/ok-main/Views/Customer/ViewCart.cshtml
+++ b/ok-main/Views/Customer/ViewCart.cshtml
@@ -48,12 +48,12 @@
           <tr>
               <td colspan="4" class="text-right">Tổng tiền</td>
               <td>@(total.ToString("n0"))</td>
-              <td></td>
             <td>
-
-                    
-            <a button type="submit" asp-controller="Customer" asp-action="Checkout" class="Checkout">Make order</a>
-               
+                <a button type="submit" asp-controller="Customer" asp-action="Checkout"
+               class="Checkout">Make order</a>
+            </td>
+          </tr>
+          <tr>
             
           </tr>
       </table>
