--- a/ok-main/Views/Shared/_LoginLayout.cshtml
+++ b/ok-main/Views/Shared/_LoginLayout.cshtml
@@ -42,14 +42,14 @@
     <!-- bundle -->
     <script src="~/js/vendor.min.js"></script>
     <script src="~/js/app.min.js"></script>
-    <script type="text/javascript">
+    @*<script type="text/javascript">
 
 
         function disableBackButton() {
             window.history.forward();
         }
         setTimeout("disableBackButton()", 0);
-    </script>
+    </script>*@
 
     @RenderSection("Scripts", required: false)
 </body>
