--- a/ok-main/Views/Shared/_CustomerLayout.cshtml
+++ b/ok-main/Views/Shared/_CustomerLayout.cshtml
@@ -174,6 +174,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+ @*   <div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
            data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -184,7 +185,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div>*@
     @RenderBody()
     <footer>
 
