--- a/ok-main/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/ok-main/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,8 +4,19 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="auth-fluid-form-box" style="background: rgba(0,0,0,0.5);">
+    <div class="align-items-top d-flex h-100">
+        <div class="card-body">
+            <!-- title-->
+           <h1>@ViewData["Title"]</h1>
+            <p>
+            Please check your email to reset your password.
+            </p>
+            <div asp-validation-summary="All" class="text-danger"></div>
+            
+
+        </div> <!-- end .card-body -->
+    </div> <!-- end .align-items-center.d-flex.h-100-->
+</div>
+
 
