--- a/ok-main/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/ok-main/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,22 +4,55 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="auth-fluid-form-box" style="background: rgba(0,0,0,0.5);">
+    <div class="align-items-center d-flex h-100">
+        <div class="card-body">
+            <!-- title-->
+            <h2 class="mt-0" style="color:white">@ViewData["Title"]</h2>
+            <h5>Enter your email.</h5>
+            <hr />          
+            <!-- form -->
+            <form id="account" method="post">
+            <div class="row">
+                <div class="col-md-12">
+                <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        @*<label asp-for="Input.Email"></label>*@
+                            <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+
+                <!-- social-->
+                <div class="text-center mt-4">
+                    <p class="font-16" style="color:white">Sign in with</p>
+                    <ul class="social-list list-inline mt-3">
+                        <li class="list-inline-item">
+                            <a href="javascript: void(0);" class="social-list-item border-primary text-primary"><i class="mdi mdi-facebook"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="javascript: void(0);" class="social-list-item border-danger text-danger"><i class="mdi mdi-google"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="javascript: void(0);" class="social-list-item border-info text-info"><i class="mdi mdi-twitter"></i></a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="javascript: void(0);" class="social-list-item border-secondary text-secondary"><i class="mdi mdi-github-circle"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </form>
+            
+            
+
+        </div> <!-- end .card-body -->
+    </div> <!-- end .align-items-center.d-flex.h-100-->
 </div>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
