--- a/ok-main/Views/Customer/Index.cshtml
+++ b/ok-main/Views/Customer/Index.cshtml
@@ -15,7 +15,7 @@
                         {
                             <div class="col-md-6 col-xl-3" >
                                 <!-- project card -->
-                                <div class="card d-block text-dark" style="width: 300px; height: 300px; margin: 50px 50px; box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25),
+                                <div class="card d-block text-dark" style="width: 300px; height: 300px; margin: 50px 0px 0px 0px; box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25),
   0 5px 15px 0 rgba(0, 0, 0, 0.12)">
                                     <!-- project-thumbnail -->
                                     <img class="card-img-top" src="@item.Image1"
