--- a/ok-main/Views/Admin/Edit.cshtml
+++ b/ok-main/Views/Admin/Edit.cshtml
@@ -6,7 +6,7 @@
 {
     <h1>Reset password</h1>
 
-    <h4>FPT BOOK </h4>
+    <h4>BOOK STORE UTC </h4>
     <hr />
     <div class="row">
         <div class="col-md-4">
