--- a/ok-main/Views/Shared/_CustomerLayout.cshtml
+++ b/ok-main/Views/Shared/_CustomerLayout.cshtml
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="~/Customer/css/vendor/responsive.bootstrap4.css">
     <link rel="stylesheet" href="~/Customer/css/vendor/jquery-jvectormap-1.2.2.css">
 
-    <title>FPT Book</title>
+    <title>BOOK STORE UTC</title>
 </head>
 <body class="loading" data-layout="detached" data-layout-config='{"leftSidebarCondensed":false,"darkMode":false, "showRightSidebarOnStart": true}'>
 
@@ -49,7 +49,7 @@
                             <img src="/images/Omini.png" alt="user-image" class="rounded-circle">
                         </span>
                         <span>
-                            <span class="account-user-name">FPT BOOK</span>
+                            <span class="account-user-name">BOOK STORE UTC</span>
                         </span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
