phân trang index

--- a/ok-main/Views/Customer/Index2.cshtml
+++ b/ok-main/Views/Customer/Index2.cshtml
@@ -1,8 +1,9 @@
-﻿@model NotUseAuto.Models.Category
+﻿@*@model NotUseAuto.Models.Category*@
 @{
     Layout = "~/Views/Shared/_CustomerLayout.cshtml";
     ViewData["Title"] = "Page Title";
 }
+
 
 
     <div class="container-fluid mm-active">
