--- a/ok-main/Views/Shared/_CustomerLayout.cshtml
+++ b/ok-main/Views/Shared/_CustomerLayout.cshtml
@@ -13,18 +13,21 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="{{asset('images/peca-04.png')}}">
-    <link rel="stylesheet" href="~/Customer/css/icons.min.css">
-    <link rel="stylesheet" href="~/Customer/css/app-modern.min.css">
-    <link rel="stylesheet" href="~/Customer/css/app-modern-dark.min.css">
+    <link rel="stylesheet" href="../../css/icons.min.css" type="text/css">
+    <link rel="stylesheet" href="../../css/app-modern.min.css" type="text/css" >
+    <link rel="stylesheet" href="../../css/app-modern-dark.min.css" type="text/css"  >
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
           rel="stylesheet" />
-    <link rel="stylesheet" href="~/Customer/css/carousel.css">
-    <link rel="shortcut icon" href="{{asset('images/peca.png')}}">
-    <link rel="stylesheet" href="~/Customer/css/vendor/dataTables.bootstrap4.css">
-    <link rel="stylesheet" href="~/Customer/css/vendor/responsive.bootstrap4.css">
-    <link rel="stylesheet" href="~/Customer/css/vendor/jquery-jvectormap-1.2.2.css">
 
+    <link rel="stylesheet" href="../../Customer/css/carousel.css">
+    <link rel="shortcut icon" href="{{asset('images/peca.png')}}">
+    <link rel="stylesheet" href="../../css/vendor/dataTables.bootstrap4.css">
+    <link rel="stylesheet" href="../../css/vendor/responsive.bootstrap4.css">
+    <link rel="stylesheet" href="../../css/vendor/jquery-jvectormap-1.2.2.css">
+    <link rel="stylesheet" scr="../../css/bootstrap.css">
+    
+   
     <title>BOOK STORE UTC</title>
 </head>
 <body class="loading" data-layout="detached" data-layout-config='{"leftSidebarCondensed":false,"darkMode":false, "showRightSidebarOnStart": true}'>
@@ -192,5 +195,7 @@
     </footer>
     <script src="~/Customer/javascript/vendor.min.js"></script>
     <script src="~/Customer/javascript/app.min.js"></script>
+    
 </body>
+
 </html>
