--- a/ok-main/Views/Shared/_Layout.cshtml
+++ b/ok-main/Views/Shared/_Layout.cshtml
@@ -190,7 +190,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
-                            2023 - 2024 © UTC BOOK MANAGEMENT (FPT.COM)
+                            2023 - 2024 © UTC BOOK MANAGEMENT (UTC.EDU.COM)
                         </div>
                     </div>
                 </div>
