--- a/ok-main/Views/Shared/_Layout.cshtml
+++ b/ok-main/Views/Shared/_Layout.cshtml
@@ -130,7 +130,7 @@
                                     <img src="~/images/Omini.png" alt="user-image" class="rounded-circle">
                                 </span>
                                 <span>
-                                    <span class="account-user-name">FPT BOOK</span>
+                                    <span class="account-user-name">BOOK STORE UTC</span>
                                     <span class="account-position"></span>
                                 </span>
                             </a>
@@ -190,7 +190,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
-                            2018 - 2020 © FPT BOOK MANAGEMENT (FPT.COM)
+                            2023 - 2024 © UTC BOOK MANAGEMENT (UTC.EDU.COM)
                         </div>
                     </div>
                 </div>
