--- a/ok-main/Views/Shared/_CustomerLayout.cshtml
+++ b/ok-main/Views/Shared/_CustomerLayout.cshtml
@@ -188,25 +188,54 @@
 	</a>
 	</div>*@
 	@RenderBody()
-	<footer class="footer">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-md-6">
-					2023 - 2024 © UTC.EDU.VN
-				</div>
-				<div class="col-md-6">
-					<div class="text-md-right footer-links d-none d-md-block">
-						<a href="javascript: void(0);">About</a>
-						<a href="javascript: void(0);">Support</a>
-						<a href="javascript: void(0);">Contact Us</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Về chúng tôi</h3>
+                    <p>Cửa hàng sách BOOK STORE là một cửa hàng chuyên cung cấp các loại sách phổ biến với giá cả hợp lý. Chúng tôi cam kết mang lại trải nghiệm mua sắm sách trực tuyến tốt nhất cho khách hàng của mình.</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Liên hệ</h3>
+                    <p>Địa chỉ: 123 Đường Xuân Thuỷ, Quận Cầu Giấy, TP Hà Nội</p>
+                    <p>Điện thoại: (012) 345-6789</p>
+                    <p>Email: info@cuahangsachbookstore.com</p>
+                </div>
+                <div class="col-md-4">
+                    <h3>Theo dõi chúng tôi</h3>
+                    <ul class="social-media">
+                        <li>
+                            <a href="https://www.facebook.com/profile.php?id=100042810897225">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/16/Facebook-icon-1.png/640px-Facebook-icon-1.png" width="20" height="20" alt="Facebook"> Facebook
+                        </a></li>
+                      <br>
+                        <li>
+                            <a href="https://twitter.com/contentbooks">
+                            <img src="https://cdn-icons-png.flaticon.com/512/124/124021.png" width="20" height="20" alt="Twitter"> Twitter
+                        </a></li>
+                        <br>
+                        <li>
+                            <a href="https://z-p42.www.instagram.com/olivebookstore/?hl=vi">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" width="20" height="20" alt="Intagram"> Intagram
+                        </a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="text-left">&copy; 2023 Cửa hàng sách BOOK STORE. Tất cả các quyền được bảo lưu.</p>
+                </div>
+                <div class="col-md-6">
+                    <p class="text-right">Thiết kế bởi <a href="#">Team code web dạo cầu giấy</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 	<script src="~/Customer/javascript/vendor.min.js"></script>
 	<script src="~/Customer/javascript/app.min.js"></script>
 
 </body>
+	
 
 </html>
