--- a/ok-main/Views/Products/Index.cshtml
+++ b/ok-main/Views/Products/Index.cshtml
@@ -1,8 +1,11 @@
-﻿@model List<Product>
+﻿
 
 @{
     ViewData["Title"] = "Index";
 }
+@using X.PagedList.Mvc.Core
+
+@model X.PagedList.IPagedList<Product>
 @if (User.Identity.IsAuthenticated && User.IsInRole("Owner"))
 {
     <h1>
@@ -114,7 +117,53 @@
 
     }
 }
+<br />
+<style>
+    .pagination-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+        font-size: 18px;
+    }
 
+    .pagination {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .pagination li {
+        margin: 0 5px;
+    }
+
+    .pagination li.active span {
+        background-color: #007bff;
+        color: #fff;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    .pagination li a {
+         color: #007bff;
+         text-decoration: none;
+         padding: 10px;
+         border-radius: 5px;
+         border: 1px solid #007bff;
+         transition: all 0.3s ease;
+    }
+
+    .pagination li a:hover {
+          background-color: #007bff;
+          color: #fff;
+     }
+</style>
+Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+
+@Html.PagedListPager(Model,page=>Url.Action("Index",new{page=page,id=ViewBag.NowCategoriesID}))
 
 
 @section Scripts {
