--- a/ok-main/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/ok-main/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -2,7 +2,101 @@
 
 @foreach (var item in Model)
 {
-	<a asp-controller="Customer" asp-action="Index2" asp-route-Id="@item.Id" class="dropdown-item notify-item">
+@*	<a asp-controller="Customer" asp-action="Index2" asp-route-Id="@item.Id" class="dropdown-item notify-item">
 		<span class="align-middle">@item.Name</span>
-	</a>
+	</a>*@
+    var getUrl = "https://localhost:5001/api/ProductsAPI/categoryId=" +item.Id.ToString() ;
+    <a class="dropdown-item notify-item" style="cursor:pointer" onclick="showProductsByCategoryId('@getUrl','@item.Name'); return false;">
+        <span class="align-middle">@item.Name</span>
+    </a>
 }
+
+
+ <script>
+	function showProductsByCategoryId(getUrl,category) {
+		var str = '';
+		$.ajax({
+			type: 'GET',
+			url: getUrl,
+			dataType: 'json',
+			success: function (data) {
+                str+=`<div class="container-fluid mm-active">
+
+        <div class="wrapper mm-show">
+            <div class="content-page">
+                <div class="content">
+                    <div class="row">`
+				$.each(data, function (key, val) {
+					console.log(getUrl);
+					str += `
+<div class="col-md-6 col-xl-3" >
+                                <!-- project card -->
+                                <div class="card d-block text-dark" style="width: 300px; height: 300px; margin: 50px 0px 0px 0px; box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25),
+  0 5px 15px 0 rgba(0, 0, 0, 0.12)">
+                                    <!-- project-thumbnail -->
+                                    <img class="card-img-top" src="${val.image1}"
+                                         alt="project image cap" style="height: 100%; width:100%">
+
+                                    <div class="card-body position-relative" style="padding-left: unset; padding-right: unset; margin-bottom: 9px ">
+                                        <!-- project title-->
+                                        <h4 class="mt-0">
+                                        <a asp-controller="Customer" asp-action="Details" asp-route-id="${val.id}">
+                                               <class="text-title">${val.name}
+
+                                               </a>
+                                        </h4>
+
+                                        <!-- project detail-->
+                                        <p class="mb-3">
+                                            <span class="pr-2 text-nowrap">
+                                            <i class=" dripicons-shopping-bag"></i>
+
+													${category}
+                                                
+                                            </span>
+                                            
+                                            <span class="text-nowrap">
+                                            <i class="uil uil-usd-circle"></i>
+                                                <b>Price: $${val.price}</b>
+                                            </span>
+                                            <br>
+                                            <span class="text-nowrap">
+                                                <i class="uil-atom"></i>
+                                            <b>Quantity: ${val.quantity}</b>
+                                                
+                                            </span>
+                                        </p>
+
+                                        <!-- project progress-->
+                                    @{
+                                        Random rnd = new Random();
+                                        // This will return either 1 or 2 randomly.
+                                        int question = rnd.Next(1, 100);
+                                    }
+                                        <p class="mb-2 font-weight-bold">Most people like <span
+                                                class="float-right">@question%</span>
+                                        </p>
+                                        <div class="progress progress-sm">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="45"
+                                                 aria-valuemin="0" aria-valuemax="100" style="width: @question%;">
+                                            </div><!-- /.progress-bar -->
+                                        </div><!-- /.progress -->
+                                    </div> <!-- end card-body-->
+                                </div> <!-- end card-->
+                            </div>`
+
+                });
+                    str += `</div>
+                    </div>
+                </div>
+            </div>
+        </div>`
+                
+				$('#divmain').html(str);
+			},
+			Error: function (xhr) {
+				alert(xhr.responeText);
+			}
+		})
+	}
+</script>
