--- a/ok-main/Views/Shared/PartialFooter.cshtml
+++ b/ok-main/Views/Shared/PartialFooter.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container">
+﻿<div class="container-fluid">
     <div class="row">
         <div class="col-md-4">
             <h3>Về chúng tôi</h3>
