--- a/ok-main/Views/Shared/PartialProduct.cshtml
+++ b/ok-main/Views/Shared/PartialProduct.cshtml
@@ -22,7 +22,7 @@
 					<i class=" dripicons-shopping-bag"></i>
 
 
-					@await Component.InvokeAsync("Category",Model.CategoryId)
+					<b>@await Component.InvokeAsync("Category",Model.CategoryId)</b>
 
 				</span>
 
