--- a/ok-main/Views/Products/SortASC.cshtml
+++ b/ok-main/Views/Products/SortASC.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@{
+﻿@{
     ViewData["Title"] = "Index";
 }
 @using X.PagedList.Mvc.Core
@@ -70,15 +68,7 @@
                                         </p>
                                     </td>
                                     <td>
-                                        @*@{
-                                            for (int i = 0; i < ViewBag.Categories.Count; i++)
-                                            {
-                                                if (ViewBag.Categories[i].Id == item.CategoryId)
-                                                {
-                                                    <text>@ViewBag.Categories[i].Name</text>
-                                                }
-                                            }
-                                        }*@
+
                                         <text>@await Component.InvokeAsync("Category",item.CategoryId)</text>
                                     </td>
                                     <td>
@@ -137,34 +127,34 @@
         padding: 0;
     }
 
-    .pagination li {
-        margin: 0 5px;
-    }
+        .pagination li {
+            margin: 0 5px;
+        }
 
-    .pagination li.active span {
-        background-color: #007bff;
-        color: #fff;
-        padding: 10px;
-        border-radius: 5px;
-    }
+            .pagination li.active span {
+                background-color: #007bff;
+                color: #fff;
+                padding: 10px;
+                border-radius: 5px;
+            }
 
-    .pagination li a {
-         color: #007bff;
-         text-decoration: none;
-         padding: 10px;
-         border-radius: 5px;
-         border: 1px solid #007bff;
-         transition: all 0.3s ease;
-    }
+            .pagination li a {
+                color: #007bff;
+                text-decoration: none;
+                padding: 10px;
+                border-radius: 5px;
+                border: 1px solid #007bff;
+                transition: all 0.3s ease;
+            }
 
-    .pagination li a:hover {
-          background-color: #007bff;
-          color: #fff;
-     }
+                .pagination li a:hover {
+                    background-color: #007bff;
+                    color: #fff;
+                }
 </style>
 Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
 
-@Html.PagedListPager(Model,page=>Url.Action("Index",new{page=page}))
+@Html.PagedListPager(Model,page=>Url.Action("SortASC",new{page=page}))
 
 
 @section Scripts {
