update edit Profile

--- a/ok-main/Views/Shared/_Layout.cshtml
+++ b/ok-main/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         <div class="left-side-menu">
             <!-- LOGO -->
             <a asp-controller="Products" asp-action="Index" class="logo text-center logo-light">
-                <a class="logo text-center logo-light" asp-controller="Products" asp-action="Index">
+                <a class="logo text-center logo-light" asp-controller="Customer" asp-action="Index">
                     <span class="logo-lg">
                         <img src="~/images/onepiece.png" alt="" height="50">
                     </span>
