--- a/ok-main/Views/Customer/UserView.cshtml
+++ b/ok-main/Views/Customer/UserView.cshtml
@@ -9,37 +9,36 @@
     <div class="col-xl-4 col-lg-5">
         <div class="card text-center">
             <div class="card-body">
-                <img src="@ViewBag.Img" class="img-thumbnail" alt="profile-image">
+                <img src="@Model.Image" class="img-thumbnail" alt="profile-image">
 
-                <h4 class="mb-0 mt-2" >@ViewBag.Fullname</h4>
+                <h4 class="mb-0 mt-2" >@Model.FullName</h4>
 
-
+                <button type="button" class="btn btn-primary btn-sm mb-2" style="margin-top:20px"><a asp-controller="Customer" asp-action="SuaAccount" asp-route-ID="@Model.Id" style="color:white">Edit</a></button>
                 <button type="button" class="btn btn-success btn-sm mb-2" style="margin-top:20px">Follow</button>
                 <button type="button" class="btn btn-danger btn-sm mb-2" style="margin-top:20px">Message</button>
 
                 <div class="text-left mt-3">
                     <h4 class="font-13 text-uppercase">About Me :</h4>
                     <p class="text-muted font-13 mb-3">
-                        Hi I'm @ViewBag.Fullname,has been the industry's standard dummy text ever since the
+                        Hi I'm @Model.FullName,has been the industry's standard dummy text ever since the
                         2022, when an unknown printer took a galley of type.
                     </p>
                     <p class="text-muted mb-2 font-13">
                         <strong>Full Name :</strong> <span class="ml-2">
-                            @ViewBag.Fullname
+                            @Model.FullName
                         </span>
                     </p>
 
                     <p class="text-muted mb-2 font-13">
                         <strong>Mobile :</strong><span class="ml-2">
-                            (123)
-                            123 1234
+                            @Model.PhoneNumber
                         </span>
                     </p>
 
-                    <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">@ViewBag.Email</span></p>
-                    <p class="text-muted mb-2 font-13"><strong>Username :</strong> <span class="ml-2 ">@ViewBag.UserName</span></p>
-                    <p class="text-muted mb-1 font-13"><strong>Date of Birth :</strong> <span class="ml-2">@ViewBag.DoB</span></p>
-                    <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">@ViewBag.Address</span></p>
+                    <p class="text-muted mb-2 font-13"><strong>Email :</strong> <span class="ml-2 ">@Model.Email</span></p>
+                    <p class="text-muted mb-2 font-13"><strong>Username :</strong> <span class="ml-2 ">@Model.UserName</span></p>
+                    <p class="text-muted mb-1 font-13"><strong>Date of Birth :</strong> <span class="ml-2">@Model.DoB</span></p>
+                    <p class="text-muted mb-1 font-13"><strong>Location :</strong> <span class="ml-2">@Model.Address</span></p>
                 </div>
 
                 <ul class="social-list list-inline mt-3 mb-0">
