Choose Image cho Profile

--- a/ok-main/Views/Products/Details.cshtml
+++ b/ok-main/Views/Products/Details.cshtml
@@ -20,13 +20,13 @@
 
                                 <div class="d-lg-flex d-none justify-content-center">
                                     <a href="javascript: void(0);">
-                                        <img src="@Model.Image1" class="img-fluid img-thumbnail p-2" style="max-width: 75px;" alt="Product-img">
+                                        <img src="@Model.Image1" class="img-fluid img-thumbnail p-2" style="max-width: 75px; max-height:max-content" alt="Product-img">
                                     </a>
-                                    <a href="javascript: void(0);" class="ml-2">
-                                        <img src="@Model.Image2" class="img-fluid img-thumbnail p-2" style="max-width: 75px;" alt="Product-img">
+                                    <a href="javascript: void(1);" class="ml-2">
+                                        <img src="@Model.Image2" class="img-fluid img-thumbnail p-2" style="max-width: 75px; max-height:max-content" alt="Product-img">
                                     </a>
-                                    <a href="javascript: void(0);" class="ml-2">
-                                        <img src="@Model.Image3" class="img-fluid img-thumbnail p-2" style="max-width: 75px;" alt="Product-img">
+                                    <a href="javascript: void(2);" class="ml-2">
+                                        <img src="@Model.Image3" class="img-fluid img-thumbnail p-2" style="max-width: 75px; max-height:max-content" alt="Product-img">
                                     </a>
                                 </div>
                             </div> <!-- end col -->
