--- a/ok-main/Views/Customer/SuaAccount.cshtml
+++ b/ok-main/Views/Customer/SuaAccount.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <form asp-controller="Customer" asp-action="SuaAccount" method="post">
+            <form asp-controller="Customer" asp-action="SuaAccount" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 @*<div class="form-group">
                     <label type = "hidden" asp-for="Id" class="control-label"></label>
@@ -22,7 +22,7 @@
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <label asp-for="Image" class="control-label"></label>
-                    <input asp-for="Image" class="form-control" />
+                    <input type="file" asp-for="Image" class="form-control" />
                     <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
                 <div class="form-group">
