--- a/ok-main/Views/Products/Index.cshtml
+++ b/ok-main/Views/Products/Index.cshtml
@@ -82,7 +82,7 @@
                                         <text>@await Component.InvokeAsync("Category",item.CategoryId)</text>
                                     </td>
                                     <td>
-                                        $@item.Price
+                                        $@item.Price.ToString("#,##0")
                                     </td>
 
                                     <td>
