--- a/ok-main/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/ok-main/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -3,7 +3,7 @@
 @foreach (var item in Model)
 {
 @*	<a asp-controller="Customer" asp-action="Index2" asp-route-Id="@item.Id" class="dropdown-item notify-item">
-		<span class="align-middle">@item.Name</span>
+*@		@*<span class="align-middle">@item.Name</span>
 	</a>*@
     var getUrl = "https://localhost:5001/api/ProductsAPI/categoryId=" +item.Id.ToString() ;
     <a class="dropdown-item notify-item" style="cursor:pointer" onclick="showProductsByCategoryId('@getUrl','@item.Name'); return false;">
@@ -40,7 +40,7 @@
                                     <div class="card-body position-relative" style="padding-left: unset; padding-right: unset; margin-bottom: 9px ">
                                         <!-- project title-->
                                         <h4 class="mt-0">
-                                        <a asp-controller="Customer" asp-action="Details" asp-route-id="${val.id}">
+                                        <a href="Customer/Details?Id=${val.id}">
                                                <class="text-title">${val.name}
 
                                                </a>
