--- a/ok-main/Views/Customer/SuaAccount.cshtml
+++ b/ok-main/Views/Customer/SuaAccount.cshtml
@@ -22,7 +22,7 @@
                 <input type="hidden" asp-for="Id" />
                 <div class="form-group">
                     <label asp-for="Image" class="control-label"></label>
-                    <input type="file" asp-for="Image" class="form-control" />
+                    <input type="file" asp-for="Image" accept=".jpg, .png,.jpeg" class="form-control" />
                     <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
                 <div class="form-group">
