--- a/ok-main/Views/Products/Create.cshtml
+++ b/ok-main/Views/Products/Create.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-controller="Products" asp-action="Create" method="post">
+            <form asp-controller="Products" asp-action="Create" method="post" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
@@ -36,17 +36,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Image1" class="control-label"></label>
-                    <input asp-for="Image1" class="form-control" />
+                    <input asp-for="Image1" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
                     <span asp-validation-for="Image1" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Image2" class="control-label"></label>
-                    <input asp-for="Image2" class="form-control" />
+                    <input asp-for="Image2" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
                     <span asp-validation-for="Image2" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Image3" class="control-label"></label>
-                    <input asp-for="Image3" class="form-control" />
+                    <input asp-for="Image3" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
                     <span asp-validation-for="Image3" class="text-danger"></span>
                 </div>
                 <div>
