--- a/ok-main/Views/Products/Edit.cshtml
+++ b/ok-main/Views/Products/Edit.cshtml
@@ -6,7 +6,7 @@
 @if (User.Identity.IsAuthenticated && User.IsInRole("Owner"))
 {
     <h1>Update Product</h1>
-    <form class="needs-validation" novalidate asp-controller="Products" asp-action="Update" method="post">
+    <form class="needs-validation" novalidate asp-controller="Products" asp-action="Update" method="post" enctype="multipart/form-data">
         <input type="hidden" asp-for="Id" class="form-control" />
         <div class="form-group mb-3">
             <label asp-for="Name"></label>
@@ -36,26 +36,20 @@
             <span asp-validation-for="Description" class="text-danger"></span>
 
         </div>
-        <div class="form-group mb-3">
-            <label asp-for="Image1"></label>
-            <input asp-for="Image1" class="form-control" id="validationCustom04"
-               required>
+        <div class="form-group">
+            <label asp-for="Image1" class="control-label"></label>
+            <input asp-for="Image1" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
             <span asp-validation-for="Image1" class="text-danger"></span>
-
         </div>
-        <div class="form-group mb-3">
-            <label asp-for="Image2"></label>
-            <input asp-for="Image2" class="form-control" id="validationCustom04"
-               required>
+        <div class="form-group">
+            <label asp-for="Image2" class="control-label"></label>
+            <input asp-for="Image2" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
             <span asp-validation-for="Image2" class="text-danger"></span>
-
         </div>
-        <div class="form-group mb-3">
-            <label asp-for="Image3"></label>
-            <input asp-for="Image3" class="form-control" id="validationCustom04"
-               required>
+        <div class="form-group">
+            <label asp-for="Image3" class="control-label"></label>
+            <input asp-for="Image3" type="file" accept=".jpg, .png,.jpeg" class="form-control" />
             <span asp-validation-for="Image3" class="text-danger"></span>
-
         </div>
         <div class="form-group mb-3">
             <label asp-for="Category"></label>
